--- a/Capstone Project/Mental Health/app/src/main/res/layout/activity_lupa_pw.xml
+++ b/Capstone Project/Mental Health/app/src/main/res/layout/activity_lupa_pw.xml
@@ -5,8 +5,8 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingStart="36dp"
-    android:paddingEnd="36dp"
+    android:paddingStart="24dp"
+    android:paddingEnd="24dp"
     android:paddingTop="24dp"
     tools:context=".ui.password.LupaPwActivity">
 
@@ -27,7 +27,7 @@
         android:fontFamily="@font/poppins_bold"
         android:text="Lupa Kata Sandi"
         android:textColor="@color/black"
-        android:textSize="16sp"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -58,11 +58,11 @@
         android:id="@+id/btn_kirim"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/poppins_bold"
+        android:fontFamily="@font/poppins_semibold"
         android:layout_marginTop="24dp"
         android:padding="14dp"
-        android:text="KIRIM"
-        android:textSize="16sp"
+        android:text="Kirim"
+        android:textSize="20sp"
         app:backgroundTint="@color/blue"
         app:cornerRadius="10dp"
         app:layout_constraintEnd_toEndOf="parent"
