--- a/Capstone Project/Mental Health/app/src/main/res/layout/activity_main.xml
+++ b/Capstone Project/Mental Health/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
         android:fontFamily="@font/poppins_bold"
         android:text="WELCOME TO"
         android:textColor="@color/black"
-        android:textSize="24dp"
+        android:textSize="24sp"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
@@ -39,7 +39,7 @@
         android:fontFamily="@font/poppins_bold"
         android:text="MENTLY"
         android:textColor="@color/pink"
-        android:textSize="24dp"
+        android:textSize="24sp"
         app:layout_constraintTop_toBottomOf="@id/textView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -54,6 +54,7 @@
         android:fontFamily="@font/poppins_light"
         android:text="Rawat Diri Anda dengan Menjaga Kesehatan Mental Anda"
         android:textColor="@color/black"
+        android:textSize="14sp"
         app:layout_constraintTop_toBottomOf="@id/textView3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -65,7 +66,7 @@
         android:layout_margin="16dp"
         android:fontFamily="@font/poppins_semibold"
         android:padding="14dp"
-        android:text="@string/login"
+        android:text="Masuk"
         android:textSize="16sp"
         android:textStyle="bold"
         app:cornerRadius="10dp"
@@ -80,7 +81,7 @@
         android:layout_margin="16dp"
         android:fontFamily="@font/poppins_semibold"
         android:padding="14dp"
-        android:text="@string/sign_up"
+        android:text="Daftar"
         android:textSize="16sp"
         android:textStyle="bold"
         app:backgroundTint="@color/blue"
