--- a/Capstone Project/Mental Health/app/src/main/res/layout/bottom_sheet_profile.xml
+++ b/Capstone Project/Mental Health/app/src/main/res/layout/bottom_sheet_profile.xml
@@ -16,7 +16,7 @@
         android:fontFamily="@font/poppins_bold"
         android:text="Foto Profil"
         android:textColor="@color/black"
-        android:textSize="20dp" />
+        android:textSize="20sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
