--- a/Capstone Project/Mental Health/app/src/main/res/layout/fragment_regist1.xml
+++ b/Capstone Project/Mental Health/app/src/main/res/layout/fragment_regist1.xml
@@ -21,7 +21,7 @@
         android:id="@+id/nomor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/poppins_medium"
+        android:fontFamily="@font/poppins_semibold"
         android:text="1/2"
         android:textColor="@color/black"
         android:textSize="16dp"
