--- a/Capstone Project/Mental Health/app/src/main/res/layout/fragment_regist2.xml
+++ b/Capstone Project/Mental Health/app/src/main/res/layout/fragment_regist2.xml
@@ -31,7 +31,7 @@
         android:id="@+id/nomor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/poppins_medium"
+        android:fontFamily="@font/poppins_semibold"
         android:text="2/2"
         android:textColor="@color/black"
         android:textSize="16sp"
