--- a/Capstone Project/Mental Health/app/src/main/res/navigation/mobile_navigation.xml
+++ b/Capstone Project/Mental Health/app/src/main/res/navigation/mobile_navigation.xml
@@ -13,7 +13,7 @@
 
     <fragment
         android:id="@+id/navigation_history"
-        android:name="id.co.mentalhealth.ui.history.HistoryFragment"
+        android:name="id.co.mentalhealth.ui.quest.history.HistoryFragment"
         android:label="@string/title_history"
         tools:layout="@layout/fragment_history" />
 
