--- a/Capstone Project/Mental Health/app/src/main/res/layout/list_dashboard.xml
+++ b/Capstone Project/Mental Health/app/src/main/res/layout/list_dashboard.xml
@@ -1,27 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
+    android:padding="16dp"
+    app:cardBackgroundColor="@android:color/white"
+    app:cardUseCompatPadding="true"
     android:elevation="4dp"
     app:cardCornerRadius="8dp"
-    app:cardElevation="4dp"
-    app:cardBackgroundColor="@android:color/white"
-    app:cardUseCompatPadding="true">
+    app:cardElevation="4dp">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/ivEventPicture"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/ivPicture"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
             android:cropToPadding="true"
             tools:srcCompat="@tools:sample/avatars"
             android:contentDescription="workshop" />
+        <TextView
+            android:id="@+id/tv_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="title"
+            android:textAlignment="center"
+            android:fontFamily="@font/poppins_semibold"/>
     </LinearLayout>
 
 
