--- a/Capstone Project/Mental Health/app/src/main/res/layout/fragment_home.xml
+++ b/Capstone Project/Mental Health/app/src/main/res/layout/fragment_home.xml
@@ -50,7 +50,6 @@
 
                 </LinearLayout>
 
-
                 <ImageView
                     android:id="@+id/imageView2"
                     android:layout_width="wrap_content"
@@ -59,37 +58,6 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
-<!--                <LinearLayout-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    app:layout_constraintBottom_toBottomOf="parent"-->
-<!--                    app:layout_constraintEnd_toEndOf="parent"-->
-<!--                    app:layout_constraintStart_toStartOf="parent"-->
-<!--                    android:orientation="horizontal"-->
-<!--                    android:gravity="center">-->
-
-<!--                    <ImageView-->
-<!--                        android:layout_width="50dp"-->
-<!--                        android:layout_height="50dp"-->
-<!--                        android:src="@drawable/baseline_emoji_emotions_24"/>-->
-
-<!--                    <ImageView-->
-<!--                        android:layout_width="50dp"-->
-<!--                        android:layout_height="50dp"-->
-<!--                        android:src="@drawable/baseline_insert_emoticon_24"/>-->
-
-<!--                    <ImageView-->
-<!--                        android:layout_width="50dp"-->
-<!--                        android:layout_height="50dp"-->
-<!--                        android:src="@drawable/baseline_emoji_emotions_24"/>-->
-
-<!--                    <ImageView-->
-<!--                        android:layout_width="50dp"-->
-<!--                        android:layout_height="50dp"-->
-<!--                        android:src="@drawable/baseline_insert_emoticon_24"/>-->
-
-
-<!--                </LinearLayout>-->
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </androidx.cardview.widget.CardView>
@@ -103,7 +71,7 @@
             app:cardElevation="4dp">
 
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
@@ -115,7 +83,10 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
                 app:cardCornerRadius="8dp"
-                app:cardElevation="4dp">
+                app:cardElevation="4dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent">
 
                 <ImageView
                     android:id="@+id/ivtest"
@@ -148,7 +119,10 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
                 app:cardCornerRadius="8dp"
-                app:cardElevation="4dp">
+                app:cardElevation="4dp"
+                app:layout_constraintTop_toBottomOf="@id/card_layout_test"
+                app:layout_constraintEnd_toEndOf="@id/card_layout_test"
+                app:layout_constraintStart_toStartOf="@id/card_layout_test">
 
                 <ImageView
                     android:id="@+id/ivpsikolog"
@@ -180,7 +154,10 @@
                 android:text="Workshop Terkini"
                 android:textSize="18sp"
                 android:textStyle="bold"
-                android:layout_marginBottom="8dp" />
+                android:layout_marginBottom="8dp"
+                app:layout_constraintTop_toBottomOf="@id/card_layout_psikolog"
+                app:layout_constraintEnd_toEndOf="@id/card_layout_psikolog"
+                app:layout_constraintStart_toStartOf="@id/card_layout_psikolog"/>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/workshop_recycler"
@@ -189,7 +166,9 @@
                 android:layout_marginBottom="16dp"
                 android:orientation="horizontal"
                 app:layoutManager="LinearLayoutManager"
-                tools:listitem="@layout/list_dashboard" />
+                tools:listitem="@layout/list_dashboard"
+                app:layout_constraintTop_toBottomOf="@id/tv_workshop"
+                app:layout_constraintEnd_toEndOf="@id/card_layout_psikolog"/>
 
             <TextView
                 android:id="@+id/tv_artikel"
@@ -198,7 +177,8 @@
                 android:text="Artikel Populer"
                 android:textSize="18sp"
                 android:textStyle="bold"
-                android:layout_marginBottom="8dp" />
+                android:layout_marginBottom="8dp"
+                app:layout_constraintTop_toBottomOf="@id/workshop_recycler"/>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/artikel_recycler"
@@ -206,9 +186,10 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 app:layoutManager="LinearLayoutManager"
-                tools:listitem="@layout/list_dashboard" />
+                tools:listitem="@layout/list_dashboard"
+                app:layout_constraintTop_toBottomOf="@id/tv_artikel"/>
 
-        </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
     </LinearLayout>
 </ScrollView>
