--- a/Capstone Project/Mental Health/app/src/main/res/layout/item_list_psikolog.xml
+++ b/Capstone Project/Mental Health/app/src/main/res/layout/item_list_psikolog.xml
@@ -4,6 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
+    app:cardUseCompatPadding="true"
+    android:elevation="4dp"
     app:cardCornerRadius="8dp"
     app:cardElevation="4dp">
 
@@ -34,7 +36,7 @@
                         app:layout_constraintTop_toTopOf="parent">
 
                         <TextView
-                            android:id="@+id/tv_description"
+                            android:id="@+id/tv_name"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/poppins_bold"
@@ -46,6 +48,7 @@
                             app:layout_constraintTop_toTopOf="parent" />
 
                         <TextView
+                            android:id="@+id/tv_spesial"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Spesialis Kesatria batang hitam"
@@ -53,6 +56,7 @@
                             android:textSize="12dp" />
 
                         <TextView
+                            android:id="@+id/tv_lokasi"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="MAKASSAR"
