--- a/Capstone Project/Mental Health/app/src/main/res/layout/activity_change_pw.xml
+++ b/Capstone Project/Mental Health/app/src/main/res/layout/activity_change_pw.xml
@@ -8,43 +8,19 @@
     android:paddingStart="24dp"
     android:paddingEnd="24dp"
     android:paddingTop="24dp"
-    tools:context=".ui.auth.password.ResetPwActivity">
-
+    tools:context=".ui.profile.change.ChangePwActivity">
 
     <TextView
         android:id="@+id/title_ubahpw"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/poppins_bold"
-        android:text="Kata Sandi Baru"
+        android:text="Ubah Kata Sandi"
         android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/txt_otp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:hint="OTP"
-        app:endIconMode="clear_text"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title_ubahpw">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/edt_otp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/poppins_semibold"
-            android:inputType="number"
-            android:padding="16dp"
-            android:maxEms="6"
-            android:textSize="14sp" />
-    </com.google.android.material.textfield.TextInputLayout>
 
 
     <com.google.android.material.textfield.TextInputLayout
@@ -56,7 +32,7 @@
         app:endIconMode="password_toggle"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_otp">
+        app:layout_constraintTop_toBottomOf="@+id/title_ubahpw">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edt_password"
