--- a/Capstone Project/Mental Health/app/src/main/res/layout/activity_home_page.xml
+++ b/Capstone Project/Mental Health/app/src/main/res/layout/activity_home_page.xml
@@ -24,6 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="0dp"
         android:layout_marginEnd="0dp"
+        app:labelVisibilityMode="selected"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
