--- a/Capstone Project/Mental Health/app/src/main/res/layout/fragment_home.xml
+++ b/Capstone Project/Mental Health/app/src/main/res/layout/fragment_home.xml
@@ -7,6 +7,8 @@
     android:paddingStart="24dp"
     android:paddingEnd="24dp"
     android:paddingTop="24dp"
+    android:scrollbars="none"
+    android:layout_marginBottom="85dp"
     tools:context=".ui.home.HomeFragment">
     <LinearLayout
         android:layout_width="match_parent"
@@ -20,13 +22,19 @@
             app:cardElevation="4dp"
             app:cardBackgroundColor="@color/pink">
 
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:src="@drawable/img"
+                android:scaleType="fitEnd"/>
+
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:padding="24dp">
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="180dp"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     app:layout_constraintStart_toStartOf="parent"
@@ -41,22 +49,14 @@
                     android:textSize="20sp" />
 
                     <TextView
-                        android:layout_width="218dp"
+                        android:layout_width="180dp"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/poppins_light"
-                        android:text="Test Masalah Kesehatan Mental Anda"
+                        android:text="Yuk Mulsi Jaga Kesehatan Mentalmu Sekarang !!!"
                         android:textColor="@color/white"
-                        android:textSize="14sp" />
+                        android:textSize="12sp" />
 
                 </LinearLayout>
-
-                <ImageView
-                    android:id="@+id/imageView2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_notifications_black_24dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -80,7 +80,7 @@
             <androidx.cardview.widget.CardView
                 android:id="@+id/card_layout_test"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="125dp"
                 android:layout_margin="8dp"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="4dp"
@@ -91,23 +91,35 @@
                 <ImageView
                     android:id="@+id/ivtest"
                     android:layout_width="match_parent"
-                    android:layout_height="125dp"
+                    android:layout_height="match_parent"
                     android:scaleType="fitEnd"
                     android:src="@drawable/bg_test"/>
 
                 <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_width="180dp"
+                    android:layout_height="match_parent"
+                    android:padding="16dp">
+
+                    <TextView
+                        android:id="@+id/cd_tv_mulaites"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Uji Tingkat Stres Anda Sekarang!"
+                        android:fontFamily="@font/poppins_semibold"
+                        android:textSize="12sp"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"/>
 
                     <com.google.android.material.button.MaterialButton
                         android:id="@+id/btn_test"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        app:cornerRadius="10dp"
                         android:text="Mulai Test"
-                        android:layout_margin="24dp"
+                        app:cornerRadius="10dp"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toStartOf="parent" />
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/cd_tv_mulaites" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -116,7 +128,7 @@
             <androidx.cardview.widget.CardView
                 android:id="@+id/card_layout_psikolog"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="125dp"
                 android:layout_margin="8dp"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="4dp"
@@ -127,12 +139,24 @@
                 <ImageView
                     android:id="@+id/ivpsikolog"
                     android:layout_width="match_parent"
-                    android:layout_height="125dp"
+                    android:layout_height="wrap_content"
                     android:scaleType="fitEnd"
                     android:src="@drawable/bg_psi"/>
                 <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_width="170dp"
+                    android:layout_height="match_parent"
+                    android:padding="16dp">
+
+                    <TextView
+                        android:id="@+id/cd_tv_cari"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Dapatkan Bantuan Dari Ahli!"
+                        android:fontFamily="@font/poppins_semibold"
+                        android:textSize="12sp"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"/>
 
                     <com.google.android.material.button.MaterialButton
                         android:id="@+id/btn_psikolog"
@@ -140,9 +164,9 @@
                         android:layout_height="wrap_content"
                         app:cornerRadius="10dp"
                         android:text="Cari Pakar"
-                        android:layout_margin="24dp"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toStartOf="parent" />
+                        app:layout_constraintTop_toBottomOf="@id/cd_tv_cari"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"/>
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.cardview.widget.CardView>
@@ -154,7 +178,7 @@
                 android:text="Workshop Terkini"
                 android:textSize="18sp"
                 android:textStyle="bold"
-                android:layout_marginBottom="8dp"
+                android:layout_margin="16dp"
                 app:layout_constraintTop_toBottomOf="@id/card_layout_psikolog"
                 app:layout_constraintEnd_toEndOf="@id/card_layout_psikolog"
                 app:layout_constraintStart_toStartOf="@id/card_layout_psikolog"/>
@@ -163,7 +187,6 @@
                 android:id="@+id/workshop_recycler"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
                 android:orientation="horizontal"
                 app:layoutManager="LinearLayoutManager"
                 tools:listitem="@layout/list_dashboard"
@@ -177,7 +200,7 @@
                 android:text="Artikel Populer"
                 android:textSize="18sp"
                 android:textStyle="bold"
-                android:layout_marginBottom="8dp"
+                android:layout_margin="16dp"
                 app:layout_constraintTop_toBottomOf="@id/workshop_recycler"/>
 
             <androidx.recyclerview.widget.RecyclerView
