--- a/Capstone Project/Mental Health/app/src/main/res/layout/activity_detail_profile.xml
+++ b/Capstone Project/Mental Health/app/src/main/res/layout/activity_detail_profile.xml
@@ -75,12 +75,12 @@
                     android:id="@+id/fab_profile_image"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:backgroundTint="@color/pink"
-                    app:tint="@color/white"
                     android:contentDescription="Unggah foto profil"
+                    app:backgroundTint="@color/pink"
                     app:layout_constraintBottom_toBottomOf="@id/profile_image"
                     app:layout_constraintEnd_toEndOf="@id/profile_image"
-                    app:srcCompat="@drawable/baseline_photo_camera_24" />
+                    app:srcCompat="@drawable/baseline_photo_camera_24"
+                    app:tint="@color/white" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <com.google.android.material.textfield.TextInputLayout
@@ -102,6 +102,24 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/txt_username"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:hint="Username"
+                app:endIconMode="clear_text">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/edt_username"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/poppins_semibold"
+                    android:inputType="text"
+                    android:padding="16dp"
+                    android:textSize="14sp" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/txt_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -109,7 +127,7 @@
                 android:hint="Email"
                 app:endIconMode="clear_text">
 
-                <com.google.android.material.textfield.TextInputEditText
+                <id.co.mentalhealth.ui.customview.MyEmailEditText
                     android:id="@+id/edt_email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
