--- a/Capstone Project/Mental Health/app/src/main/res/layout/activity_main.xml
+++ b/Capstone Project/Mental Health/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,6 @@
         android:layout_marginTop="70dp"
         android:scaleType="center"
         android:src="@drawable/picture"
-        app:layout_constraintBottom_toTopOf="@+id/textView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -49,15 +48,14 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="24dp"
-        android:layout_marginBottom="80dp"
-        android:gravity="center_horizontal"
         android:fontFamily="@font/poppins_light"
+        android:gravity="center_horizontal"
         android:text="Rawat Diri Anda dengan Menjaga Kesehatan Mental Anda"
         android:textColor="@color/black"
         android:textSize="14sp"
-        app:layout_constraintTop_toBottomOf="@id/textView3"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textView3" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_masuk"
