--- a/Capstone Project/Mental Health/app/src/main/res/layout/bottom_sheet_profile.xml
+++ b/Capstone Project/Mental Health/app/src/main/res/layout/bottom_sheet_profile.xml
@@ -21,10 +21,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="24dp"
-        android:padding="8dp"
         android:layout_marginHorizontal="24dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:padding="8dp">
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fab_camera"
@@ -55,17 +54,26 @@
             android:id="@+id/btn_upload"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginHorizontal="8dp"
             android:backgroundTint="@color/blue"
             android:drawableLeft="@drawable/baseline_upload_24"
             android:drawableTint="@color/light_blue"
             android:fontFamily="@font/poppins_bold"
             android:padding="12dp"
-            android:layout_marginHorizontal="8dp"
             android:text="Unggah"
             android:textColor="@color/light_blue"
             android:textSize="16sp"
             app:cornerRadius="10dp" />
     </LinearLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginBottom="24dp"
+        android:fontFamily="@font/poppins_semibold"
+        android:text="Disarankan pilih foto 1:1 yah"
+        android:textColor="@color/black" />
 
 
 </LinearLayout>
