add progresbar quest & dokter & history

--- a/Capstone Project/Mental Health/app/src/main/res/layout/activity_quest.xml
+++ b/Capstone Project/Mental Health/app/src/main/res/layout/activity_quest.xml
@@ -17,8 +17,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:visibility="visible" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cd_listPsi"
