--- a/Capstone Project/Mental Health/app/src/main/res/layout/activity_psikolog.xml
+++ b/Capstone Project/Mental Health/app/src/main/res/layout/activity_psikolog.xml
@@ -8,6 +8,18 @@
     android:paddingTop="24dp"
     tools:context=".ui.psikolog.PsikologActivity">
 
+    <ProgressBar
+        android:id="@+id/progressIndicator"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:elevation="1dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="visible" />
+
     <androidx.cardview.widget.CardView
         android:id="@+id/cd_listPsi"
         android:layout_width="match_parent"
