--- a/Capstone Project/Mental Health/app/src/main/res/layout/activity_lupa_pw.xml
+++ b/Capstone Project/Mental Health/app/src/main/res/layout/activity_lupa_pw.xml
@@ -10,6 +10,16 @@
     android:paddingTop="24dp"
     tools:context=".ui.auth.password.LupaPwActivity">
 
+    <ProgressBar
+        android:id="@+id/progressIndicator"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <ImageView
         android:id="@+id/btnBack"
         android:layout_width="wrap_content"
