--- a/Capstone Project/Mental Health/app/src/main/res/layout/item_list_history.xml
+++ b/Capstone Project/Mental Health/app/src/main/res/layout/item_list_history.xml
@@ -38,6 +38,7 @@
                 android:id="@+id/tv_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:transitionName="date"
                 android:text="27/06/2023"
                 android:textColor="@color/black"
                 android:fontFamily="@font/poppins_semibold"
@@ -51,6 +52,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
+            android:transitionName="description"
             android:text="Lorem ipsum \n Kacau Brutal Tidak tertolong"
             android:fontFamily="@font/poppins_semibold"
             android:textColor="@color/black"
